--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TDSR Ent</title>
-    <link rel="stylesheet" href="Stylesheets/styles.css">
+    <link rel="stylesheet" href="Stylesheets/main.css">
+    <link rel="stylesheet" href="Stylesheets/header.css">
+    <link rel="stylesheet" href="Stylesheets/footer.css">
+    <link rel="stylesheet" href="Stylesheets/index/projects.css">
 </head>
 <body>
 <header>
