--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 </head>
 <body>
 <header>
-    <!-- LEFT HEADER -->
-    <div class="row clearfix">
+    <div class="clearfix">
+        <!-- LEFT HEADER -->
         <div class="header-container header-container-left">
             <img src="Images/TDSR_Entertainment_TM.png" alt="Company Logo" class="logo">
         </div>
@@ -20,7 +20,7 @@
         <!-- CENTER HEADER -->
         <div class="header-container header-container-center">
             <!-- Main Menu Button -->
-            <a href="index.html" class="menu-button">Main Menu</a>
+            <a href="index.html" class="menu-button">Home</a>
 
             <!-- Dropdown for Projects -->
             <div class="project-dropdown">
@@ -36,7 +36,17 @@
 
         <!-- RIGHT HEADER -->
         <div class="header-container header-container-right">
-            <img src="Images/TDSR_Entertainment_TM.png" alt="Company Logo" class="logo">
+            <a class="social-media-logo-container" href="https://twitter.com/tom_milman" target="_blank">
+                <img src="Images/Social-media/x-logo.png" alt="X/Twitter Account" class="social-media-logo">
+            </a>
+
+            <a class="social-media-logo-container" href="https://www.youtube.com/@tdsr" target="_blank">
+                <img src="Images/Social-media/yt-logo.png" alt="Youtube Account" class="social-media-logo">
+            </a>
+
+            <a class="social-media-logo-container" href="https://www.twitch.tv/tom_milman" target="_blank">
+                <img src="Images/Social-media/twitch-logo.png" alt="Youtube Account" class="social-media-logo">
+            </a>
         </div>
     </div>
 </header>
