update header and project display

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TDSR Ent</title>
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
+
     <link rel="stylesheet" href="Stylesheets/main.css">
     <link rel="stylesheet" href="Stylesheets/header.css">
     <link rel="stylesheet" href="Stylesheets/footer.css">
@@ -37,34 +40,40 @@
         <!-- RIGHT HEADER -->
         <div class="header-container header-container-right">
             <a class="social-media-logo-container" href="https://twitter.com/tom_milman" target="_blank">
-                <img src="Images/Social-media/x-logo.png" alt="X/Twitter Account" class="social-media-logo">
+                <i class="fa-brands fa-twitter social-media-logo"></i>
             </a>
 
             <a class="social-media-logo-container" href="https://www.youtube.com/@tdsr" target="_blank">
-                <img src="Images/Social-media/yt-logo.png" alt="Youtube Account" class="social-media-logo">
+                <i class="fa-brands fa-youtube social-media-logo"></i>
             </a>
 
             <a class="social-media-logo-container" href="https://www.twitch.tv/tom_milman" target="_blank">
-                <img src="Images/Social-media/twitch-logo.png" alt="Youtube Account" class="social-media-logo">
+                <i class="fa-brands fa-twitch social-media-logo"></i>
+            </a>
+
+            <a class="social-media-logo-container" href="https://bsky.app/profile/tom-milman.bsky.social" target="_blank">
+                <i class="fa-brands fa-bluesky social-media-logo"></i>
             </a>
         </div>
     </div>
 </header>
-<section class="projects">
-    <!-- Repeat this block for each project -->
-    <div class="project">
-        <h2>Project Title</h2>
-        <div class="project-images">
-            <img src="Images/project1-1.jpg" alt="Project Image 1">
-            <img src="Images/project1-2.jpg" alt="Project Image 2">
-            <img src="Images/project1-3.jpg" alt="Project Image 3">
-            <img src="Images/project1-4.jpg" alt="Project Image 4">
-        </div>
-        <p>Short description of the project goes here.</p>
-        <a href="project1.html" class="view-more">View More</a>
+
+<div class="project">
+    <div class="project-capsule">
+        <img src="Images/NBBT/VerticalCapsule.png" alt="New Brooklyn Bridge Tycoon">
     </div>
-    <!-- End project block -->
-</section>
+
+    <div class="project-content">
+        <h1>New Brooklyn Bridge Tycoon</h1>
+        <p class="project-release-date">Release: Coming Soon</p>
+        <p class="project-description">
+            New York City just turned the Brooklyn bridge into a park, and the visitors are in desperate need of food!
+            Now's your chance to make it big in the Big Apple! Build food booths, grow produce, or locally source
+            ingredients until you're the only competition left in New Brooklyn Bridge Tycoon!
+        </p>
+        <button class="more-info-btn">More info</button>
+    </div>
+</div>
 
 <footer>
     <p>&copy; 2024 TDSR Entertainment™ LLC</p>
