add Steam and Press Kit links to project previews

--- a/index.html
+++ b/index.html
@@ -73,15 +73,15 @@
             ingredients until you're the only competition left in New Brooklyn Bridge Tycoon!
         </p>
         <div class="project-buttons">
-            <button class="more-info-btn">
+            <a class="more-info-btn" href="https://store.steampowered.com/app/2759000/New_Brooklyn_Bridge_Tycoon/" target="_blank">
                 <i class="fa-brands fa-steam"></i>Steam
-            </button>
-            <button class="more-info-btn">
+            </a>
+            <a class="more-info-btn">
                 <i class="fa-solid fa-circle-info"></i>More Info
-            </button>
-            <button class="more-info-btn">
+            </a>
+            <a class="more-info-btn" href="https://drive.google.com/drive/u/1/folders/1DK2UiI-osufmbzFE05rLgxQcuJeTcVP2" target="_blank">
                 <i class="fa-solid fa-newspaper"></i>Press Kit
-            </button>
+            </a>
         </div>
 
         <div class="carousel">
@@ -111,15 +111,15 @@
             Cyber Lounge Tycoon is a sandbox management game where you get to build and customize your own gaming club. Serve each customer or get a staff to do that for you. Upgrade and maintain your existing services. Expand and unlock new options. Decide what kind of club you want to run!
         </p>
         <div class="project-buttons">
-            <button class="more-info-btn">
+            <a class="more-info-btn" href="https://store.steampowered.com/app/1852150/Cyber_Lounge_Tycoon/" target="_blank">
                 <i class="fa-brands fa-steam"></i>Steam
-            </button>
-            <button class="more-info-btn">
+            </a>
+            <a class="more-info-btn">
                 <i class="fa-solid fa-circle-info"></i>More Info
-            </button>
-            <button class="more-info-btn">
+            </a>
+            <a class="more-info-btn" href="https://drive.google.com/drive/u/1/folders/16t6qcGXeVUrIZrRzgibmQtohMl7xB_nj" target="_blank">
                 <i class="fa-solid fa-newspaper"></i>Press Kit
-            </button>
+            </a>
         </div>
 
         <div class="carousel">
