--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class="project-dropdown">
                 <button class="dropdown-btn">Projects</button>
                 <div class="dropdown-content">
-                    <a href="project1.html">Project 1</a>
+                    <a href="nbbt.html">Project 1</a>
                     <a href="project2.html">Project 2</a>
                     <a href="project3.html">Project 3</a>
                     <!-- Add more projects here -->
