add Cyber Loube Tycoon page

--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
             <div class="project-dropdown">
                 <button class="dropdown-btn">Projects</button>
                 <div class="dropdown-content">
-                    <a href="nbbt.html">Project 1</a>
-                    <a href="project2.html">Project 2</a>
-                    <a href="project3.html">Project 3</a>
+                    <a href="nbbt.html">New Brooklyn Bridge Tycoon</a>
+                    <a href="project2.html">Saloon King</a>
+                    <a href="clt.html">Cyber Lounge Tycoon</a>
                     <!-- Add more projects here -->
                 </div>
             </div>
@@ -76,7 +76,7 @@
             <a class="more-info-btn" href="https://store.steampowered.com/app/2759000/New_Brooklyn_Bridge_Tycoon/" target="_blank">
                 <i class="fa-brands fa-steam"></i>Steam
             </a>
-            <a class="more-info-btn">
+            <a class="more-info-btn" href="nbbt.html">
                 <i class="fa-solid fa-circle-info"></i>More Info
             </a>
             <a class="more-info-btn" href="https://drive.google.com/drive/u/1/folders/1DK2UiI-osufmbzFE05rLgxQcuJeTcVP2" target="_blank">
@@ -114,7 +114,7 @@
             <a class="more-info-btn" href="https://store.steampowered.com/app/1852150/Cyber_Lounge_Tycoon/" target="_blank">
                 <i class="fa-brands fa-steam"></i>Steam
             </a>
-            <a class="more-info-btn">
+            <a class="more-info-btn" href="clt.html">
                 <i class="fa-solid fa-circle-info"></i>More Info
             </a>
             <a class="more-info-btn" href="https://drive.google.com/drive/u/1/folders/16t6qcGXeVUrIZrRzgibmQtohMl7xB_nj" target="_blank">
