--- a/clt.html
+++ b/clt.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>New Brooklyn Bridge Tycoon</title>
+    <title>Cyber Lounge Tycoon</title>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
 
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="Stylesheets/header.css">
     <link rel="stylesheet" href="Stylesheets/footer.css">
     <link rel="stylesheet" href="Stylesheets/project/project.css">
-    <link rel="stylesheet" href="Stylesheets/project/nbbt.css">
+    <link rel="stylesheet" href="Stylesheets/project/clt.css">
     <link rel="stylesheet" href="Stylesheets/index/carousel.css">
 </head>
 <body>
@@ -64,17 +64,19 @@
 
 <div class="container">
     <div class="top-images">
-        <div style="float: left; width: 35%;"></div>
+        <div class="character-right">
+            <img src="Images/CLT/CharacterJoystick.png" alt="Character">
+        </div>
 
         <!-- Game Title Logo -->
         <div class="title-logo">
-            <img class="nbbt-logo" src="Images/NBBT/Logo.png" alt="New Brooklyn Bridge Tycoon">
+            <img class="nbbt-logo" src="Images/CLT/Logo.png" alt="New Brooklyn Bridge Tycoon">
 
             <div class="project-buttons">
-                <a class="more-info-btn" href="https://store.steampowered.com/app/2759000/New_Brooklyn_Bridge_Tycoon/" target="_blank">
+                <a class="more-info-btn" href="https://store.steampowered.com/app/1852150/Cyber_Lounge_Tycoon/" target="_blank">
                     <i class="fa-brands fa-steam"></i>Steam
                 </a>
-                <a class="more-info-btn" href="https://drive.google.com/drive/u/1/folders/1DK2UiI-osufmbzFE05rLgxQcuJeTcVP2" target="_blank">
+                <a class="more-info-btn" href="https://drive.google.com/drive/u/1/folders/16t6qcGXeVUrIZrRzgibmQtohMl7xB_nj" target="_blank">
                     <i class="fa-solid fa-newspaper"></i>Press Kit
                 </a>
             </div>
@@ -82,62 +84,84 @@
 
         <!-- Character Image -->
         <div class="character">
-            <img src="Images/NBBT/Character.png" alt="Character">
+            <img src="Images/CLT/CharacterVR.png" alt="Character">
         </div>
     </div>
 
-    <p class="coming-soon">Coming Soon</p>
+    <p class="coming-soon">Released November 1st, 2023</p>
+</div>
 
-    <!-- Game Description -->
-    <div class="top-description">
-        <p>Build your food empire!</p>
-        <p>Manage the process from food production all the way to selling to customers.</p>
-        <p>Play against friends! You can even sabotage them if you’re willing to go down that path.</p>
-    </div>
-
+<div class="container">
+    <iframe width="817" height="460"
+            src="https://www.youtube.com/embed/hZ_ICL125W8?autoplay=1&mute=1">
+    </iframe>
 </div>
 
 <div class="carousel-parent">
     <div class="carousel" style="max-width: 1300px">
         <button class="prev" onclick="updateCarousel('nbbt_carousel_track', -1)">&#10094;</button>
         <div id="nbbt_carousel_track" class="carousel-track">
-            <div class="carousel-item"><img src="Images/NBBT/screenshot1.png" alt="Image 1" onclick="openModal(this)"></div>
-            <div class="carousel-item"><img src="Images/NBBT/screenshot2.png" alt="Image 2" onclick="openModal(this)"></div>
-            <div class="carousel-item"><img src="Images/NBBT/screenshot3.png" alt="Image 3" onclick="openModal(this)"></div>
-            <div class="carousel-item"><img src="Images/NBBT/screenshot4.png" alt="Image 4" onclick="openModal(this)"></div>
-            <div class="carousel-item"><img src="Images/NBBT/screenshot5.png" alt="Image 5" onclick="openModal(this)"></div>
-            <div class="carousel-item"><img src="Images/NBBT/screenshot6.png" alt="Image 6" onclick="openModal(this)"></div>
+            <div class="carousel-item"><img src="Images/CLT/screenshot1.png" alt="Image 1" onclick="openModal(this)"></div>
+            <div class="carousel-item"><img src="Images/CLT/screenshot2.png" alt="Image 2" onclick="openModal(this)"></div>
+            <div class="carousel-item"><img src="Images/CLT/screenshot3.png" alt="Image 3" onclick="openModal(this)"></div>
+            <div class="carousel-item"><img src="Images/CLT/screenshot4.png" alt="Image 4" onclick="openModal(this)"></div>
+            <div class="carousel-item"><img src="Images/CLT/screenshot5.png" alt="Image 5" onclick="openModal(this)"></div>
         </div>
         <button class="next" onclick="updateCarousel('nbbt_carousel_track', 1)">&#10095;</button>
     </div>
 </div>
 
+<div class="description-main">
+    <p style="text-align: center; width: 50%">
+        Cyber Lounge Tycoon is a <b>sandbox management</b> game where you get to <b>build and customize</b> your own gaming club. <b>Serve</b> each customer or get a staff to do that for you. <b>Upgrade and maintain</b> your existing services. <b>Expand and unlock</b> new options. Decide what kind of club you want to run!
+    </p>
+</div>
+
 <div class="description">
-    <p>
-        New York City just turned the Brooklyn bridge into a park, and the visitors are in desperate need of food! Now’s your chance to make it big in the Big Apple! Build food booths, grow produce, or locally source ingredients until you're the only competition left in New Brooklyn Bridge Tycoon!
-    </p>
+    <div>
+        <img src="Images/CLT/Building_2.gif" alt="Building gif">
+    </div>
+    <div>
+        <p> MANAGE AND UPGRADE </p>
+        <p> Manage your resources to create the environment you see fit for your lounge. upgrade your environment to attract more customers and ease the workload of your staff. </p>
+    </div>
+</div>
 
-    <img src="Images/NBBT/Build-an-empire-header.png" alt="Build an empire">
-    <p> Build your food shops and serve hungry customers. </p>
-    <p> Take care of your shops and upgrade them to be even better. </p>
+<div class="description">
+    <div>
+        <p>CUSTOMIZE ESTHETICS</p>
+        <p>
+            Managing the way a lounge looks is important. Customize with resources to create the environment you see fit for playing customers.
+        </p>
+    </div>
+    <div>
+        <img src="Images/CLT/Wall_Floor_customization_2.gif" alt="Building gif">
+    </div>
+</div>
 
-    <img src="Images/NBBT/resource-management-header.png" alt="Resource management">
-    <p>
-        To make food, you will need ingredients.
-        Produce ingredients in factories or get them elsewhere, but your shops will need ingredients!
-    </p>
-    <p style="margin-top: 15px;">
-        You can produce ingredients. But sometimes it's easier to buy them from others.
-        Have too many ingredients? Sell them to those in need!
-    </p>
+<div class="description">
+    <div>
+        <img src="Images/CLT/Serving_customers_2.gif" alt="Building gif">
+    </div>
+    <div>
+        <p>SERVE CUSTOMERS</p>
+        <p>
+            Satisfying your customers requires a keen eye in management. Provide the services for your customer’s needs and keep them happy
+        </p>
+    </div>
+</div>
 
-    <img src="Images/NBBT/Sabotage-header.png" alt="Sabotage">
-    <p>
-        Competition is hard. Sometimes resorting to sabotage is the only option. Bend the rules, disrupt their shops and supply chains to tilt the playing field in your favor.
-    </p>
-    <p style="margin-top: 15px;">
-        In the cutthroat world of food empires, only the most strategic and daring will thrive!
-    </p>
+<div class="description">
+    <div>
+        <p>EXPAND</p>
+        <p>
+            EXPAND
+            Running out of space is not an option, expand and reallocate to newer and bigger lounges with larger areas that provide room for upgrades.
+        </p>
+    </div>
+    <div>
+        <img src="Images/CLT/Serving_customers_2.gif" alt="Building gif">
+    </div>
 </div>
 
 <!-- Modal for full-size image -->
