--- a/clt.html
+++ b/clt.html
@@ -160,7 +160,7 @@
         </p>
     </div>
     <div>
-        <img src="Images/CLT/Serving_customers_2.gif" alt="Building gif">
+        <img src="Images/CLT/Expanding_2.gif" alt="Building gif">
     </div>
 </div>
 
