add Saloon King page

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <button class="dropdown-btn">Projects</button>
                 <div class="dropdown-content">
                     <a href="nbbt.html">New Brooklyn Bridge Tycoon</a>
-                    <a href="project2.html">Saloon King</a>
+                    <a href="saloon-king.html">Saloon King</a>
                     <a href="clt.html">Cyber Lounge Tycoon</a>
                     <!-- Add more projects here -->
                 </div>
