--- a/index.html
+++ b/index.html
@@ -101,6 +101,44 @@
 
 <div class="project">
     <div class="project-capsule">
+        <img src="Images/SK/VerticalCapsule.png" alt="Saloon King">
+    </div>
+
+    <div class="project-content">
+        <h1>Saloon King</h1>
+        <p class="project-release-date">Released: December 16th, 2024</p>
+        <p class="project-description">
+            A short, cinematic western shooter with wild, fast-paced spray 'n' pray action! Help a sharp-shootin' renegade on a mission to take over the saloon. Shoot first, ask questions never. Clear out anyone daring enough to stand in your way!
+        </p>
+        <div class="project-buttons">
+            <a class="more-info-btn" href="https://store.steampowered.com/app/3313230/Saloon_King/" target="_blank">
+                <i class="fa-brands fa-steam"></i>Steam
+            </a>
+            <a class="more-info-btn" href="saloon-king.html">
+                <i class="fa-solid fa-circle-info"></i>More Info
+            </a>
+            <a class="more-info-btn" href="https://impress.games/press-kit/tdsr-entertainment/saloon-king" target="_blank">
+                <i class="fa-solid fa-newspaper"></i>Press Kit
+            </a>
+        </div>
+
+        <div class="carousel">
+            <button class="prev" onclick="updateCarousel('sk_carousel_track', -1)">&#10094;</button>
+            <div id="sk_carousel_track" class="carousel-track">
+                <div class="carousel-item"><img src="Images/SK/screenshot 1.png" alt="Image 1" onclick="openModal(this)"></div>
+                <div class="carousel-item"><img src="Images/SK/screenshot 2.png" alt="Image 2" onclick="openModal(this)"></div>
+                <div class="carousel-item"><img src="Images/SK/screenshot 3.png" alt="Image 3" onclick="openModal(this)"></div>
+                <div class="carousel-item"><img src="Images/SK/screenshot 5.png" alt="Image 5" onclick="openModal(this)"></div>
+                <div class="carousel-item"><img src="Images/SK/screenshot 6.png" alt="Image 5" onclick="openModal(this)"></div>
+                <div class="carousel-item"><img src="Images/SK/screenshot 7.png" alt="Image 5" onclick="openModal(this)"></div>
+            </div>
+            <button class="next" onclick="updateCarousel('sk_carousel_track', 1)">&#10095;</button>
+        </div>
+    </div>
+</div>
+
+<div class="project">
+    <div class="project-capsule">
         <img src="Images/CLT/VerticalCapsule.png" alt="Cyber Lounge Tycoon">
     </div>
 
